--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #d3d3d3;
+  background-color: rgb(151, 143, 143);
   /*background-image: url(https://img.freepik.com/premium-vector/cute-brown-aesthetic-abstract-minimal-background-perfect-wallpaper-backdrop-postcard-background_565280-444.jpg?w=2000);
   */background-repeat: no-repeat;
   background-size: cover;
