--- a/client/src/components/dogs/dogs.module.css
+++ b/client/src/components/dogs/dogs.module.css
@@ -24,7 +24,7 @@
     display: flex;
     flex-flow: column wrap;
     align-items: center;
-    background-color: rgb(151, 143, 143);;
+    background-color: rgb(83, 78, 78);
     /*background: rgb(117, 114, 114);*/
     text-decoration: none;
     border-radius: 30px;
